--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -8,7 +8,7 @@
   <ul>
     <% skills.forEach(skill => { %>
       <li>
-        <a href="/skills/<%= skill.id %>"><%= skill.name %></a> - <%= skill.level %>
+        <a href="../../models/skills.js"><%= skill.name %></a> - <%= skill.level %>
         <%- include('partials/header', { pageTitle: 'List of Skills' }) %>
       </li>
     <% }); %>
